minor fixes and logic left

--- a/index.html
+++ b/index.html
@@ -123,12 +123,80 @@
 </div>
 <div class="ContainerLow">
 <div class="Block">
-    <div class="flexContainer">
-        <div class="LabelButtonTitle">
+    <div class="flexContainer2" style="margin-top: 1%;">
+        <div class="LabelButtonTitle2">
             <p class="titleText">Розрахунок</p>
         </div>
 
     </div>
+    <div class="textContainer">
+<div class="columnTextLow">
+<h4 style="color:rgb(15, 240, 15) ;">Матеріали:</h4>
+<div style="display: flex; flex-direction:row; justify-content: space-between;">
+    <p class="lowText">1.Грунтовка</p>
+    <p class="lowText">_л</p>
+</div>
+<div style="display: flex; flex-direction:row; justify-content: space-between;">
+    <p class="lowText">2.Підложка</p>
+        <p class="lowText">_ м².</p>
+</div>
+
+
+<div style="display: flex; flex-direction:row; justify-content: space-between;">
+    <p class="lowText">3.Клей</p>
+    <p class="lowText">_ л.</p>
+</div>
+<div style="display: flex; flex-direction:row; justify-content: space-between;">
+    <p class="lowText">4.Ламінат</p>
+    <p class="lowText">_ шт.</p>
+    <p class="lowText">_ п.</p>
+</div>
+
+<div style="display: flex; flex-direction:row; justify-content: space-between;">
+    <p class="lowText">5.Витратні матеріали </p>
+    <p class="lowText">_ комп.</p>
+
+</div>
+
+</div>
+
+<div class="columnTextLow" >
+    <h4 style="color:rgb(15, 240, 15) ;">Роботи:</h4>
+    <div style="display: flex; flex-direction:row; justify-content: space-between;">
+        <p class="lowText">1.Грунтовка основи укладки</p>
+        <p class="lowText">_ м².</p>
+    </div>
+    <div style="display: flex; flex-direction:row; justify-content: space-between;">
+        <p class="lowText">2.Укладка підложки</p>
+            <p class="lowText">_ м².</p>
+    </div>
+    
+    
+    <div style="display: flex; flex-direction:row; justify-content: space-between;">
+        <p class="lowText">3.Укладка ламінату</p>
+        <p class="lowText">_ м².</p>
+    </div>
+    </div>
+    </div>
+
+
+
+<div class="ButtonRow">
+    <div class="LabelButtonTitle3">
+        <p class="titleText" style="color:rgb(15, 240, 15)">Зберегти розрахунок</p>
+    </div>
+    <div class="LabelButtonTitle3">
+        <p class="titleText" style="color:rgb(15, 240, 15)">Додати розрахунок</p>
+    </div>
+    <div class="LabelButtonTitle3">
+        <p class="titleText" style="color:rgb(15, 240, 15)">Обрати постачальника</p>
+    </div>
+    <div class="LabelButtonTitle3">
+        <p class="titleText" style="color:rgb(15, 240, 15)">Обрати підрядника</p>
+    </div>
+</div>
+
+
 </div>
 </div>
         </main>
